--- a/src/index.njk
+++ b/src/index.njk
@@ -1,18 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="manifest" href="manifest.json">
-    <title>Alex Dueppen</title>
-</head>
-<body>
-    <p>For now just go to <a href="https://adueppen.xyz">my old website</a>, this one won't be much for a while.</p>
-    <script>
-        if ("serviceWorker" in navigator)
-            navigator.serviceWorker.register("/service-worker.js");
-    </script>
-</body>
-</html>
+---
+layout: layouts/base.njk
+description: Alex Dueppen's super WIP personal website
+title: Alex Dueppen
+---
+<p>Hi. For now just go to <a href="{{siteData.oldSite}}">my old website</a>, this one won't be much for a while.</p>
+<input type="button" onclick="utils.swapColor()" value="why">
