Lots of stuff: switch to TS, add some sort of header, SW update prompt

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,7 +1,8 @@
 ---
 layout: layouts/base.njk
-description: Alex Dueppen's super WIP personal website
+description: Hello, I'm a human on the internet who occasionally does cool projects.
 title: Alex Dueppen
 ---
-<p>Hi. For now just go to <a href="{{ siteData.oldSite }}">my old website</a>, this one won't be much for a while.</p>
-<input type="button" onclick="utils.swapColor()" value="why">
+<p>Hi. For links to me in other places, please go to <a href="{{ siteData.oldSite }}">my old website</a>,
+  this one is still very much in development.</p>
+<input type="button" onclick="utils.swapColor()" value="swap theme">
