--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -3,22 +3,23 @@
 <head>
   <meta charset="utf-8">
   <script>
-      document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + 'has-js ';
+    document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + 'has-js ';
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
+  <meta name="author" content="Alex Dueppen">
   <meta name="theme-color" content="{{ siteData.themeColor }}">
   <title>{{ renderData.title or title or metadata.title }}</title>
   <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
-{{ content | safe }}
-<script>
-    if ("serviceWorker" in navigator)
-        navigator.serviceWorker.register("/service-worker.js");
-</script>
-<script src="scripts/index.js"></script>
+  <header>
+    <p>Alex Dueppen</p>
+    <hr>
+  </header>
+  {{ content | safe }}
+  <script src="scripts/index.js"></script>
 </body>
 </html>
