--- a/src/index.njk
+++ b/src/index.njk
@@ -2,7 +2,8 @@
 layout: layouts/base.njk
 description: Hello, I'm a human on the internet who occasionally does cool projects.
 title: Alex Dueppen
+navtitle: Home
+tags: toplevel
 ---
 <p>Hi. For links to me in other places, please go to <a href="{{ siteData.oldSite }}">my old website</a>,
   this one is still very much in development.</p>
-<input type="button" onclick="utils.swapColor()" value="swap theme">
