Add WIP projects page, change theme-color, and fix sorting
setting dates manually is kinda hacky but I guess it works

--- a/src/about.njk
+++ b/src/about.njk
@@ -4,5 +4,6 @@ description: Hello, I'm a human on the internet who occasionally does cool proje
 title: Alex Dueppen
 navtitle: About
 tags: toplevel
+date: 0000-01-03 #hacky way to sort properly
 ---
 <p>This is an about page. Soon enough this page will have some information about who I am.</p>
