--- a/src/index.njk
+++ b/src/index.njk
@@ -4,6 +4,7 @@ description: Hello, I'm a human on the internet who occasionally does cool proje
 title: Alex Dueppen
 navtitle: Home
 tags: toplevel
+date: 0000-01-01 #hacky way to sort properly
 ---
 <p>Hi. For links to me in other places, please go to <a href="{{ siteData.oldSite }}">my old website</a>,
   this one is still very much in development.</p>
