--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-  <link rel="stylesheet" type="text/css" href="../../styles/index.scss"/>
   <meta charset="utf-8">
   <script>
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + 'has-js ';
@@ -19,7 +18,7 @@
   <header>
     <p>Alex Dueppen</p>
     <ul class="nav">
-      {%- for nav in collections.toplevel | reverse -%}
+      {%- for nav in collections.toplevel -%}
       <li class="nav-item{% if nav.url == page.url %} nav-item-active{% endif %}"><a href="{{ nav.url | url }}">{{ nav.data.navtitle }}</a></li>
       {%- endfor -%}
     </ul>
