--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -6,8 +6,8 @@
     document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + 'has-js ';
   </script>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="manifest" href="/manifest.json">
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <meta name="author" content="Alex Dueppen">
   <meta name="theme-color" content="{{ siteData.themeColor }}">
@@ -27,6 +27,6 @@
   <footer>
     <input type="button" onclick="utils.swapColor()" value="swap theme">
   </footer>
-  <script src="scripts/index.js"></script>
+  <script src="/scripts/index.js"></script>
 </body>
 </html>
