--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -28,5 +28,6 @@
     <input type="button" onclick="utils.swapColor()" value="swap theme">
   </footer>
   <script src="/scripts/index.js"></script>
+  <script src="//instant.page/2.0.0" type="module" integrity="sha384-D7B5eODAUd397+f4zNFAVlnDNDtO1ppV8rPnfygILQXhqu3cUndgHvlcJR2Bhig8"></script>
 </body>
 </html>
