--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,24 +2,24 @@
 
 :root {
   --bg: #fff;
-  --text: #000;
+  --fg: #000;
 }
 
 body {
   background-color: var(--bg);
-  color: var(--text);
+  color: var(--fg);
   font-family: sans-serif;
 }
 
 header {
   display: inline-flex;
-  border-bottom: 1px solid var(--text);
+  border-bottom: 1px solid var(--fg);
   width: 100%;
 }
 
 footer {
   display: inline-flex;
-  border-top: 1px solid var(--text);
+  border-top: 1px solid var(--fg);
   width: 100%;
 }
 
@@ -42,5 +42,5 @@ footer > * {
 }
 
 a:visited, a {
-  color: var(--text);
+  color: var(--fg);
 }
