--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -25,7 +25,7 @@
   </header>
   {{ content | safe }}
   <footer>
-    <div id="themeSelect">
+    <div class="themeSelect">
       <label>
         <input type="radio" name="theme" value="light" onclick="utils.setTheme('light')">
         Light
@@ -40,6 +40,9 @@
       </label>
     </div>
   </footer>
+  <div id="newContent" onclick="window.location.reload();">
+    <p>This site has been updated. Click here or reload the page to update.</p>
+  </div>
   <script src="/scripts/index.js"></script>
   <script src="//instant.page/2.0.0" type="module" integrity="sha384-D7B5eODAUd397+f4zNFAVlnDNDtO1ppV8rPnfygILQXhqu3cUndgHvlcJR2Bhig8"></script>
 </body>
