Add some actual content, including social links and résumé

--- a/src/about.njk
+++ b/src/about.njk
@@ -6,4 +6,21 @@ navtitle: About
 tags: toplevel
 date: 0000-01-03 #hacky way to sort properly
 ---
-<p>This is an about page. Soon enough this page will have some information about who I am.</p>
+<h2>Who am I?</h2>
+<p>
+  I've been passionate about computers ever since I was young and got to play around on my mom's old Macintosh Centris.
+  Since then, this has shaped much of my life. I took every single computer science class available at my high school,
+  and I've met many of my closest friends on the Internet as a fellow computer-obsessed human. I absolutely love to
+  learn more things about the world of technology, and I'm incredibly eager to find my place in it.
+</p>
+<h2>Links</h2>
+<p>Here are some relevant links, including me on other platforms</p>
+<ul>
+  <li>Email: <a href="mailto:contact@ajd.sh">contact@ajd.sh</a></li> {# might make sense to stick these in siteData eventually #}
+  <li>GitHub: <a href="https://github.com/adueppen">@adueppen</a></li>
+  <li>LinkedIn: <a href="https://www.linkedin.com/in/alex-dueppen/">/in/alex-dueppen/</a></li>
+  <li>Mastodon: <a href="https://tilde.zone/@adueppen">@adueppen@tilde.zone</a></li>
+  <li>Reddit: <a href="https://www.reddit.com/user/adueppen">/u/adueppen</a></li>
+  <li><a href="/resume.pdf">Résumé</a></li>
+  <li>Twitter: <a href="https://twitter.com/AlexDueppen">@AlexDueppen</a></li>
+</ul>
