--- a/src/index.njk
+++ b/src/index.njk
@@ -6,5 +6,5 @@ navtitle: Home
 tags: toplevel
 date: 0000-01-01 #hacky way to sort properly
 ---
-<p>Hi. For links to me in other places, please go to <a href="{{ siteData.oldSite }}">my old website</a>,
-  this one is still very much in development.</p>
+<p>Hi. I'm Alex, and I enjoy doing cool things with computers.</p>
+<p>My site here is still in development, so my old site can be found <a href="{{ siteData.oldSite }}">here</a>.</p>
