--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -39,11 +39,13 @@
         Black
       </label>
     </div>
+    <div class="source">
+      <a href="{{ siteData.repoLink }}" target="_blank" rel="noopener">Website Source Code</a>
+    </div>
   </footer>
   <div id="newContent" onclick="window.location.reload();">
     <p>This site has been updated. Click here or reload the page to update.</p>
   </div>
-  {#<canvas id="bgCanvas" width="100%" height="100%"></canvas>#}
   <script src="/scripts/index.js"></script>
   <script src="//instant.page/2.0.0" type="module" integrity="sha384-D7B5eODAUd397+f4zNFAVlnDNDtO1ppV8rPnfygILQXhqu3cUndgHvlcJR2Bhig8"></script>
 </body>
