--- a/src/projects.njk
+++ b/src/projects.njk
@@ -6,4 +6,26 @@ navtitle: Projects
 tags: toplevel
 date: 0000-01-02 #hacky way to sort properly
 ---
-<p>This is a page for my current projects. Soon enough it will have some information on them.</p>
+<p>I absolutely love to contribute to the world of Open Source Software, so here are a few projects that I've either
+  created or have made contributions to:</p>
+<ul>
+  <li><a href="https://github.com/materialos" target="_blank" rel="noopener">Material Open Source</a>
+    <ul>
+      <li>
+        MOS is a collaborative OSS project made by people all over the world, with the goal of creating a
+        comprehensive set of graphics, especially product icons, making use of Google's Material Design standards.
+        At present, the project has around 660 icons from over 40 different contributors. I contributed around
+        75 icons to the project, primarily representing Linux applications.
+      </li>
+    </ul>
+  </li>
+  <li><a href="https://unicorn-utterances.com" target="_blank" rel="noopener">Unicorn Utterances</a>
+    <ul>
+      <li>
+        Unicorn Utterances is a community-based, open source website that teaches a variety of computer science topics.
+        I help to maintain the site and research topics for posts, and I have contributed features such as a
+        dark theme and a variety of bugfixes.
+      </li>
+    </ul>
+  </li>
+</ul>
