--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,6 +41,12 @@ footer > * {
   font-weight: bold;
 }
 
+.source {
+  margin-left: auto;
+  justify-content: end;
+  margin-right: 1em;
+}
+
 a:visited, a {
   color: var(--fg);
 }
@@ -57,8 +63,3 @@ a:visited, a {
   color: var(--bg);
   text-align: center;
 }
-
-/*#bgCanvas {
-  position: fixed;
-  z-index: -9999;
-}*/
