--- a/src/about.njk
+++ b/src/about.njk
@@ -8,19 +8,22 @@ date: 0000-01-03 #hacky way to sort properly
 ---
 <h2>Who am I?</h2>
 <p>
-  I've been passionate about computers ever since I was young and got to play around on my mom's old Macintosh Centris.
-  Since then, this has shaped much of my life. I took every single computer science class available at my high school,
-  and I've met many of my closest friends on the Internet as a fellow computer-obsessed human. I absolutely love to
-  learn more things about the world of technology, and I'm incredibly eager to find my place in it.
+  I've been passionate about computers ever since I was young, playing around on my mom's old Macintosh Centris.
+  Since then, this passion has shaped much of my life. I took every single computer science class available at my high
+  school, and I've met many of my closest friends on the Internet as a fellow computer-obsessed human. I absolutely love
+  to learn more things about the world of technology, and I'm incredibly eager to find my place in it.
 </p>
 <h2>Links</h2>
-<p>Here are some relevant links, including me on other platforms</p>
-<ul>
-  <li>Email: <a href="mailto:contact@ajd.sh">contact@ajd.sh</a></li> {# might make sense to stick these in siteData eventually #}
+<p>
+  Here are some relevant links, including me on other platforms.
+  In general, any account with the username <b>adueppen</b> is probably me.
+</p>
+<ul> {# todo: stick these in siteData at some point #}
+  <li>Email: <a href="mailto:contact@ajd.sh">contact@ajd.sh</a></li>
   <li>GitHub: <a href="https://github.com/adueppen">@adueppen</a></li>
   <li>LinkedIn: <a href="https://www.linkedin.com/in/alex-dueppen/">/in/alex-dueppen/</a></li>
   <li>Mastodon: <a href="https://tilde.zone/@adueppen">@adueppen@tilde.zone</a></li>
   <li>Reddit: <a href="https://www.reddit.com/user/adueppen">/u/adueppen</a></li>
-  <li><a href="/resume.pdf">Résumé</a></li>
   <li>Twitter: <a href="https://twitter.com/AlexDueppen">@AlexDueppen</a></li>
+  <li><a href="/resume.pdf">Resume</a></li>
 </ul>
