--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -19,11 +19,13 @@
 <body id="top" itemscope itemtype="http://schema.org/WebPage">
   <header>
     <p>Alex Dueppen</p>
-    <ul class="nav">
-      {%- for nav in collections.toplevel -%}
-      <li class="nav-item{% if nav.url == page.url %} nav-item-active{% endif %}"><a href="{{ nav.url | url }}">{{ nav.data.navtitle }}</a></li>
-      {%- endfor -%}
-    </ul>
+    <nav>
+      <ul>
+        {%- for nav in collections.toplevel -%}
+        <li class="nav-item{% if nav.url == page.url %} nav-item-active{% endif %}"><a href="{{ nav.url | url }}">{{ nav.data.navtitle }}</a></li>
+        {%- endfor -%}
+      </ul>
+    </nav>
   </header>
   <main>{{ content | safe }}</main>
   <footer>
