--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,16 @@
 @import '_reset.scss';
 
+$dividerHeight: 4px;
+
 :root {
   --bg: #fff;
   --fg: #000;
+
+  //primary colors, thanks https://github.com/zavukodlak!
+  --darkblue: #002890;
+  --blue: #3a99f0;
+  --green: #0cc355;
+  --gray: #d7dee2;
 }
 
 body {
@@ -18,25 +26,32 @@ h2 {
 
 header {
   display: inline-flex;
-  border-bottom: 1px solid var(--fg);
+  box-shadow: inset 0 (-$dividerHeight) var(--fg);
   width: 100%;
   padding: 0 1em 0 1em;
 }
 
 footer {
   display: inline-flex;
-  border-top: 1px solid var(--fg);
+  box-shadow: inset 0 $dividerHeight var(--fg);
   width: 100%;
   padding: 0 1em 1em 1em;
 }
 
 @media screen and (max-width: 400px) {
-  header {
+  header, .themeSelect > * {
     display: block;
+    height: auto;
   }
 
-  .themeSelect > * {
-    display: block;
+  nav ul {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-evenly;
+  }
+
+  ul .nav-item {
+    width: 33.33%;
   }
 }
 
@@ -45,25 +60,44 @@ main {
 }
 
 footer > * {
-  margin-top: 16px;
+  margin-top: 1em;
 }
 
-.nav {
-  padding: 0;
+nav {
   margin-left: auto;
   justify-content: end;
 }
 
-.nav-item {
-  display: inline-block;
+nav ul {
+  padding: 0;
+  margin: 0;
+  line-height: 56px;
 }
 
-.nav-item + .nav-item {
-  margin-left: 1em;
+.nav-item {
+  display: inline-block;
+  width: 72px;
+  text-align: center;
 }
 
 .nav-item-active {
   font-weight: bold;
+}
+
+.nav-item:nth-of-type(1) {
+  border-bottom: $dividerHeight solid var(--green);
+}
+
+.nav-item:nth-of-type(2) {
+  border-bottom: $dividerHeight solid var(--blue);
+}
+
+.nav-item:nth-of-type(3) {
+  border-bottom: $dividerHeight solid var(--darkblue); //todo: contrast issues
+}
+
+.nav-item a {
+  text-decoration: none;
 }
 
 .source {
@@ -87,7 +121,7 @@ a:visited, a {
   text-align: center;
 }
 
-#newContent > p {
+#newContent p {
   padding: 0 1em 0 1em;
 }
 
