Fix display issue and make nav links slightly wider

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,7 +76,7 @@ nav ul {
 
 .nav-item {
   display: inline-block;
-  width: 72px;
+  width: 80px;
   text-align: center;
 }
 
@@ -98,6 +98,7 @@ nav ul {
 
 .nav-item a {
   text-decoration: none;
+  display: block;
 }
 
 .source {
