Mostly CSS changes: radio button styling, transitions, hover effects

--- a/src/index.njk
+++ b/src/index.njk
@@ -7,4 +7,4 @@ tags: toplevel
 date: 0000-01-01 #hacky way to sort properly
 ---
 <p>Hi. I'm Alex, and I enjoy doing cool things with computers.</p>
-<p>My site here is still in development, so my old site can be found <a href="{{ siteData.oldSite }}">here</a>.</p>
+<p>Please see the pages above for more information. <sup>(I'll have more on this page soon!)</sup></p>
