--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,8 +3,10 @@
 $dividerHeight: 4px;
 
 :root {
-  --bg: #fff;
+  --bg: #fafafa;
   --fg: #000;
+  --fgo: #0002;
+  --dv: #7d98a1;
 
   //primary colors, thanks https://github.com/zavukodlak!
   --darkblue: #002890;
@@ -16,6 +18,7 @@ $dividerHeight: 4px;
 body {
   background-color: var(--bg);
   color: var(--fg);
+  transition: all .25s;
   margin: 0;
   font-family: "Nunito Sans", sans-serif;
 }
@@ -26,14 +29,14 @@ h2 {
 
 header {
   display: inline-flex;
-  box-shadow: inset 0 (-$dividerHeight) var(--fg);
+  box-shadow: inset 0 (-$dividerHeight) var(--dv);
   width: 100%;
   padding: 0 1em 0 1em;
 }
 
 footer {
   display: inline-flex;
-  box-shadow: inset 0 $dividerHeight var(--fg);
+  box-shadow: inset 0 $dividerHeight var(--dv);
   width: 100%;
   padding: 0 1em 1em 1em;
 }
@@ -93,12 +96,17 @@ nav ul {
 }
 
 .nav-item:nth-of-type(3) {
-  border-bottom: $dividerHeight solid var(--darkblue); //todo: contrast issues
+  border-bottom: $dividerHeight solid var(--darkblue); //todo: potential contrast issues
 }
 
 .nav-item a {
   text-decoration: none;
   display: block;
+  transition: all .25s;
+}
+
+.nav-item a:hover {
+  background-color: var(--fgo);
 }
 
 .source {
@@ -128,4 +136,21 @@ a:visited, a {
 
 ul {
   padding-left: 20px;
+}
+
+input[type=radio] {
+  appearance: none;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  margin: 4px;
+  border: 2px solid var(--fg);
+  border-radius: 100%;
+  height: 16px;
+  width: 16px;
+  transition: border .15s;
+}
+
+input[type=radio]:checked {
+  border: 5px solid var(--fg);
 }
