--- a/src/about.njk
+++ b/src/about.njk
@@ -1,8 +1,7 @@
 ---
 layout: layouts/base.njk
 description: Hello, I'm a human on the internet who occasionally does cool projects.
-title: Alex Dueppen
-navtitle: About
+title: About
 tags: toplevel
 date: 0000-01-03 #hacky way to sort properly
 ---
