--- a/src/index.njk
+++ b/src/index.njk
@@ -1,8 +1,7 @@
 ---
 layout: layouts/base.njk
 description: Hello, I'm a human on the internet who occasionally does cool projects.
-title: Alex Dueppen
-navtitle: Home
+title: Home
 tags: toplevel
 date: 0000-01-01 #hacky way to sort properly
 ---
