--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,6 +23,10 @@ body {
   font-family: "Nunito Sans", sans-serif;
 }
 
+.preload, .preload * {
+  transition: none !important;
+}
+
 h2 {
   font-family: "Nunito", sans-serif;
 }
