Hide theme select when JS is unavailable

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -145,6 +145,10 @@ ul {
   padding-left: 20px;
 }
 
+.requiresJS {
+  display: none;
+}
+
 input[type=radio] {
   appearance: none;
   display: inline-block;
