--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -26,7 +26,7 @@
   </header>
   <main>{{ content | safe }}</main>
   <footer>
-    <div class="themeSelect">
+    <div class="themeSelect requiresJS">
       <label>
         <input type="radio" name="theme" value="light" onclick="utils.setTheme('light')">
         Light
