Reorganize/refactor some code
Also a slight a11y improvement for theme

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -26,7 +26,7 @@
   </header>
   <main>{{ content | safe }}</main>
   <footer>
-    <div class="themeSelect requiresJS">
+    <div class="themeSelect requiresJS" aria-label="Theme selection">
       <label>
         <input type="radio" name="theme" value="light" onclick="utils.setTheme('light')">
         Light
