--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,8 @@
 @import '_reset.scss';
 
 $dividerHeight: 4px;
+$standardPadding: 0 1em;
+$transitionDuration: .25s;
 
 :root {
   --bg: #fafafa;
@@ -15,13 +17,13 @@ $dividerHeight: 4px;
   --gray: #d7dee2;
 
   scrollbar-color: var(--fgo) var(--bg); //this is only a thing in firefox at the moment but it looks nice
-  transition: scrollbar-color .25s;
+  transition: scrollbar-color $transitionDuration;
 }
 
 body {
   background-color: var(--bg);
   color: var(--fg);
-  transition: all .25s;
+  transition: all $transitionDuration;
   margin: 0;
   font-family: "Nunito Sans", sans-serif;
 }
@@ -30,7 +32,7 @@ body {
   transition: none !important;
 }
 
-h2 {
+h1, h2 {
   font-family: "Nunito", sans-serif;
 }
 
@@ -38,14 +40,14 @@ header {
   display: inline-flex;
   box-shadow: inset 0 (-$dividerHeight) var(--dv);
   width: 100%;
-  padding: 0 1em 0 1em;
+  padding: $standardPadding;
 }
 
 footer {
   display: inline-flex;
   box-shadow: inset 0 $dividerHeight var(--dv);
   width: 100%;
-  padding: 0 1em 1em 1em;
+  padding: $standardPadding 1em 1em; //bottom padding in case of scrolling
 }
 
 @media screen and (max-width: 400px) {
@@ -66,7 +68,7 @@ footer {
 }
 
 main {
-  padding: 0 1em 0 1em;
+  padding: $standardPadding;
 }
 
 footer > * {
@@ -88,6 +90,7 @@ nav ul {
   display: inline-block;
   width: 80px;
   text-align: center;
+  border-bottom: $dividerHeight solid;
 }
 
 .nav-item-active {
@@ -95,21 +98,21 @@ nav ul {
 }
 
 .nav-item:nth-of-type(1) {
-  border-bottom: $dividerHeight solid var(--green);
+  border-bottom-color: var(--green);
 }
 
 .nav-item:nth-of-type(2) {
-  border-bottom: $dividerHeight solid var(--blue);
+  border-bottom-color: var(--blue);
 }
 
 .nav-item:nth-of-type(3) {
-  border-bottom: $dividerHeight solid var(--darkblue); //todo: potential contrast issues
+  border-bottom-color: var(--darkblue);
 }
 
 .nav-item a {
   text-decoration: none;
   display: block;
-  transition: all .25s;
+  transition: all $transitionDuration;
 }
 
 .nav-item a:hover {
@@ -138,7 +141,7 @@ a:visited, a {
 }
 
 #newContent p {
-  padding: 0 1em 0 1em;
+  padding: $standardPadding;
 }
 
 ul {
