--- a/src/index.njk
+++ b/src/index.njk
@@ -1,9 +1,10 @@
 ---
 layout: layouts/base.njk
 description: Hello, I'm a human on the internet who occasionally does cool projects.
-title: Home
-tags: toplevel
-date: 0000-01-01 #hacky way to sort properly
+
+eleventyNavigation:
+  key: Home
+  order: 0
 ---
 <p>Hi. I'm Alex, and I enjoy doing cool things with computers.</p>
 <p>Please see the pages above for more information. <sup>(I'll have more on this page soon!)</sup></p>
