--- a/src/projects.njk
+++ b/src/projects.njk
@@ -1,9 +1,10 @@
 ---
 layout: layouts/base.njk
 description: Hello, I'm a human on the internet who occasionally does cool projects.
-title: Projects
-tags: toplevel
-date: 0000-01-02 #hacky way to sort properly
+
+eleventyNavigation:
+  key: Projects
+  order: 1
 ---
 <p>I absolutely love to contribute to the world of Open Source Software, so here are a few projects that I've either
   created or have made contributions to:</p>
