--- a/src/about.njk
+++ b/src/about.njk
@@ -1,9 +1,10 @@
 ---
 layout: layouts/base.njk
 description: Hello, I'm a human on the internet who occasionally does cool projects.
-title: About
-tags: toplevel
-date: 0000-01-03 #hacky way to sort properly
+
+eleventyNavigation:
+  key: About
+  order: 2
 ---
 <h2>Who am I?</h2>
 <p>
