--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <meta name="author" content="Alex Dueppen">
   <meta name="theme-color" content="{{ siteData.themeColor }}">
-  <title>Alex Dueppen: {{ renderData.title or title or metadata.title }}</title>
+  <title>Alex Dueppen: {{ eleventyNavigation.key or renderData.title or title or metadata.title }}</title>
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles/index.css">
