--- a/src/index.njk
+++ b/src/index.njk
@@ -6,5 +6,8 @@ eleventyNavigation:
   key: Home
   order: 0
 ---
-<p>Hi. I'm Alex, and I enjoy doing cool things with computers.</p>
-<p>Please see the pages above for more information. <sup>(I'll have more on this page soon!)</sup></p>
+<h2>Hello.</h2>
+<p>
+  I'm Alex Dueppen, and I enjoy doing cool things with computers, especially open source
+  <a href="projects/">projects</a>.
+</p>
