--- a/src/projects.njk
+++ b/src/projects.njk
@@ -29,3 +29,7 @@ eleventyNavigation:
     </ul>
   </li>
 </ul>
+<p>
+  More things I've contributed to can always be found on my <a href="{{ siteData.links.github.url }}">
+    {{ siteData.links.github.siteName }}</a> page.
+</p>
