--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,7 +15,6 @@
 </head>
 <body class="preload" itemscope itemtype="http://schema.org/WebPage">
   <header>
-    <p>Alex Dueppen</p>
     <nav>
       {{ collections.all | eleventyNavigation | eleventyNavigationToHtml({
         listItemClass: "nav-item",
@@ -44,7 +43,7 @@
       <a href="{{ siteData.repoLink }}" target="_blank" rel="noopener">Website Source Code</a>
     </div>
   </footer>
-  <div id="newContent" onclick="window.location.reload();">
+  <div class="newContent requiresJS" onclick="window.location.reload();">
     <p>This site has been updated. Click here or reload the page to update.</p>
   </div>
   <script src="/scripts/index.js"></script>
