--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,6 +40,7 @@ h1, h2 {
 
 header {
   display: inline-flex;
+  justify-content: center;
   box-shadow: inset 0 (-$dividerHeight) var(--dv);
   width: 100%;
   padding: $standardPadding;
@@ -76,11 +77,6 @@ footer > * {
   margin-top: 1em;
 }
 
-nav {
-  margin-left: auto;
-  justify-content: end;
-}
-
 nav ul {
   display: inline-flex;
   padding: 0;
@@ -90,7 +86,7 @@ nav ul {
 
 .nav-item {
   list-style: none;
-  width: 80px;
+  width: 120px;
   text-align: center;
   border-bottom: $dividerHeight solid;
 }
@@ -123,7 +119,6 @@ nav ul {
 
 .source {
   margin-left: auto;
-  justify-content: end;
 }
 
 .nav-item a, .nav-item a:visited {
@@ -134,7 +129,7 @@ a, a:visited {
   color: var(--lc);
 }
 
-#newContent {
+.newContent {
   display: none;
   cursor: pointer;
   position: fixed;
