update packages and change some organization

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -27,15 +27,15 @@
   <footer>
     <div class="themeSelect requiresJS" aria-label="Theme selection">
       <label>
-        <input type="radio" name="theme" value="light" onclick="utils.setTheme('light')">
+        <input type="radio" name="theme" value="light" onclick="setTheme('light')">
         Light
       </label>
       <label>
-        <input type="radio" name="theme" value="dark" onclick="utils.setTheme('dark')">
+        <input type="radio" name="theme" value="dark" onclick="setTheme('dark')">
         Dark
       </label>
       <label>
-        <input type="radio" name="theme" value="black" onclick="utils.setTheme('black')">
+        <input type="radio" name="theme" value="black" onclick="setTheme('black')">
         Black
       </label>
     </div>
