--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,6 +3,7 @@
 $dividerHeight: 4px;
 $standardPadding: 0 1em;
 $transitionDuration: .25s;
+$contentWidth: 1024px;
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -57,20 +58,20 @@ header {
   justify-content: center;
   box-shadow: inset 0 (-$dividerHeight) var(--dv);
   width: 100%;
-  padding: $standardPadding;
 }
 
 footer {
   display: inline-flex;
+  justify-content: center;
   box-shadow: inset 0 $dividerHeight var(--dv);
   width: 100%;
   padding: $standardPadding 1em 1em; //bottom padding in case of scrolling
 }
 
-@media screen and (max-width: 400px) {
-  header, .themeSelect > * {
+@media screen and (max-width: 480px) {
+  header {
     display: block;
-    height: auto;
+    padding: 0;
   }
 
   nav ul {
@@ -79,16 +80,27 @@ footer {
   }
 
   ul .nav-item {
-    width: 33.33%;
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .themeSelect > * {
+    display: block;
+    height: auto;
   }
 }
 
 main {
   padding: $standardPadding;
+  margin: 0 auto;
+  max-width: $contentWidth;
 }
 
-footer > * {
+.footerContent {
+  display: inherit;
   margin-top: 1em;
+  width: $contentWidth;
 }
 
 nav ul {
@@ -110,15 +122,19 @@ nav ul {
 }
 
 .nav-item:nth-of-type(1) {
-  border-bottom-color: var(--green);
+  border-bottom-color: var(--darkblue);
 }
 
 .nav-item:nth-of-type(2) {
-  border-bottom-color: var(--blue);
+  border-bottom-color: var(--middarkblue);
 }
 
 .nav-item:nth-of-type(3) {
-  border-bottom-color: var(--darkblue);
+  border-bottom-color: var(--blue);
+}
+
+.nav-item:nth-of-type(4) {
+  border-bottom-color: var(--green);
 }
 
 .nav-item a {
