fix service worker for real this time I think

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -46,7 +46,7 @@
       </div>
     </div>
   </footer>
-  <div class="newContent requiresJS" onclick="window.location.reload();">
+  <div class="requiresJS" id="newContent" onclick="window.location.reload();">
     <p>This site has been updated. Click here or reload the page to update.</p>
   </div>
   <script src="/scripts/index.js"></script>
