--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -65,7 +65,6 @@ footer {
   justify-content: center;
   box-shadow: inset 0 $dividerHeight var(--dv);
   width: 100%;
-  padding: $standardPadding 1em 1em; //bottom padding in case of scrolling
 }
 
 @media screen and (max-width: 480px) {
@@ -101,7 +100,7 @@ main {
   display: inherit;
   margin-top: 1em;
   width: $contentWidth;
-  padding: $standardPadding;
+  padding: $standardPadding calc(1em - #{$dividerHeight}); //bottom padding in case of scrolling
 }
 
 nav ul {
