--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -2,23 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="manifest" href="/manifest.json">
-  <meta name="description" content="{{ renderData.description or description or metadata.description }}">
-  <meta name="author" content="Alex Dueppen">
   <meta name="theme-color" content="{{ siteData.themeColor }}">
-  <title>Alex Dueppen: {{ eleventyNavigation.key or renderData.title or title or metadata.title }}</title>
+  {% metagen
+    title="Alex Dueppen: " + eleventyNavigation.key or title,
+    desc=description,
+    url=siteData.url + page.url,
+    img=siteData.url + (thumb or "/images/icons/icon-512x512.png"),
+    img_alt="Alex Dueppen logo",
+    twitter_card_type=card_type,
+    twitter_handle=siteData.links.twitter.username,
+    name="Alex Dueppen" %}
+  <title>Alex Dueppen: {{ eleventyNavigation.key or title }}</title>
   <link rel="stylesheet" href="/styles/index.css">
 </head>
 <body class="preload" itemscope itemtype="http://schema.org/WebPage">
   <header>
     <nav>
-      {{ collections.all | eleventyNavigation | eleventyNavigationToHtml({
-        listItemClass: "nav-item",
-        activeListItemClass: "nav-item-active",
-        activeKey: eleventyNavigation.key
-      }) | safe }}
+      {%- set navPages = collections.all | eleventyNavigation %}
+      <ul>
+        {%- for entry in navPages %}
+          {%- set active = (entry.key == eleventyNavigation.key or entry.key == eleventyNavigation.parent) %}
+          <li class="nav-item{% if active %} nav-item-active{% endif %}">
+            <a href="{{ entry.url }}">{{ entry.key }}</a>
+          </li>
+        {%- endfor %}
+      </ul>
     </nav>
   </header>
   <main>{{ content | safe }}</main>
