--- a/src/_includes/styles/_fonts.scss
+++ b/src/_includes/styles/_fonts.scss
@@ -3,6 +3,7 @@
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
   url('fonts/nunito-v23-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
   url('fonts/nunito-v23-latin-regular.woff') format('woff'), /* Modern Browsers */
@@ -14,6 +15,7 @@
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local(''),
   url('fonts/nunito-v23-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
   url('fonts/nunito-v23-latin-700.woff') format('woff'), /* Modern Browsers */
@@ -25,6 +27,7 @@
   font-family: 'Nunito';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
   url('fonts/nunito-v23-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
   url('fonts/nunito-v23-latin-italic.woff') format('woff'), /* Modern Browsers */
@@ -36,6 +39,7 @@
   font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
   url('fonts/nunito-sans-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
   url('fonts/nunito-sans-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
@@ -47,6 +51,7 @@
   font-family: 'Nunito Sans';
   font-style: italic;
   font-weight: 400;
+  font-display: swap;
   src: local(''),
   url('fonts/nunito-sans-v11-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
   url('fonts/nunito-sans-v11-latin-italic.woff') format('woff'), /* Modern Browsers */
@@ -58,6 +63,7 @@
   font-family: 'Nunito Sans';
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
   src: local(''),
   url('fonts/nunito-sans-v11-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
   url('fonts/nunito-sans-v11-latin-700.woff') format('woff'), /* Modern Browsers */
