--- a/src/_includes/styles/_fonts.scss
+++ b/src/_includes/styles/_fonts.scss
@@ -69,3 +69,47 @@
   url('fonts/nunito-sans-v11-latin-700.woff') format('woff'), /* Modern Browsers */
   url('fonts/nunito-sans-v11-latin-700.ttf') format('truetype') /* Safari, Android, iOS */
 }
+
+/* jetbrains-mono-regular - latin */
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''),
+  url('fonts/jetbrains-mono-v12-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-regular.woff') format('woff'), /* Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-regular.ttf') format('truetype') /* Safari, Android, iOS */
+}
+
+/* jetbrains-mono-700 - latin */
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-style: normal;
+  font-weight: 700;
+  src: local(''),
+  url('fonts/jetbrains-mono-v12-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-700.woff') format('woff'), /* Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-700.ttf') format('truetype') /* Safari, Android, iOS */
+}
+
+/* jetbrains-mono-italic - latin */
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-style: italic;
+  font-weight: 400;
+  src: local(''),
+  url('fonts/jetbrains-mono-v12-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-italic.woff') format('woff'), /* Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-italic.ttf') format('truetype') /* Safari, Android, iOS */
+}
+
+/* jetbrains-mono-700italic - latin */
+@font-face {
+  font-family: 'JetBrains Mono';
+  font-style: italic;
+  font-weight: 700;
+  src: local(''),
+  url('fonts/jetbrains-mono-v12-latin-700italic.woff2') format('woff2'), /* Super Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-700italic.woff') format('woff'), /* Modern Browsers */
+  url('fonts/jetbrains-mono-v12-latin-700italic.ttf') format('truetype') /* Safari, Android, iOS */
+}
